--- a/GPT4-Version/templates/index.html
+++ b/GPT4-Version/templates/index.html
@@ -10,7 +10,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
-
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar" id="myNavbar">
@@ -29,7 +28,6 @@
       <a href="/signup" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">Signup</a>
     {% endif %}
   </div>
-
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
@@ -44,14 +42,12 @@
     {% endif %}
   </div>
 </div>
-
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">PA <span class="w3-hide-small">ROS</span> WEBSITE</span>
   </div>
 </div>
-
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">Générateur de Texte GPT</h3>
@@ -60,6 +56,13 @@
     <div class="container">
       {% if 'user_email' in session %}
       <form action="/generate_text" method="post">
+          <label for="prompt_start">Choose a prompt start:</label>
+          <select id="prompt_start" name="prompt_start">
+              <option value="make me">Make me</option>
+              <option value="talk about">Talk about</option>
+          </select>
+
+          <br>
           <label for="prompt">Prompt:</label>
           <input type="text" id="prompt" name="prompt" required>
           <select id="model_api" name="model_api" required>
@@ -86,57 +89,46 @@
     </div>
   </div>
 </div>
-
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
   </div>
 </div>
-
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">IMAGES</h3>
   <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
     </div>
-
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
     </div>
-
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
     </div>
-
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
     </div>
   </div>
-
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
     </div>
-
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
     </div>
-
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
     </div>
-
     <div class="w3-col m3 w3-margin-bottom">
       <img src="https://www.w3schools.com/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
     </div>
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
 </div>
-
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
@@ -145,20 +137,17 @@
     <p id="caption" class="w3-opacity w3-large"></p>
   </div>
 </div>
-
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
   </div>
 </div>
-
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 </div>
-
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
@@ -172,7 +161,6 @@
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
-
 <script>
 // Modal Image Gallery
 function onClick(element) {
@@ -181,7 +169,6 @@ function onClick(element) {
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
 }
-
 // Change style of navbar on scroll
 window.onscroll = function() {myFunction()};
 function myFunction() {
@@ -192,7 +179,6 @@ function myFunction() {
         navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
     }
 }
-
 // Used to toggle the menu on small screens when clicking on the menu button
 function toggleFunction() {
     var x = document.getElementById("navDemo");
@@ -203,6 +189,5 @@ function toggleFunction() {
     }
 }
 </script>
-
 </body>
 </html>
