--- a/GPT4-Version/templates/index.html
+++ b/GPT4-Version/templates/index.html
@@ -17,9 +17,7 @@
       <i class="fa fa-bars"></i>
     </a>
     <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i>Video creation</a>
     {% if 'user_email' in session %}
       <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right">{{ session['user_email'] }}</a>
       <a href="/logout" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">Logout</a>
@@ -31,8 +29,6 @@
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">OUR GENERATION</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
     {% if 'user_email' in session %}
       <a href="#" class="w3-bar-item w3-button">{{ session['user_email'] }}</a>
       <a href="/logout" class="w3-bar-item w3-button">Logout</a>
@@ -50,8 +46,8 @@
 </div>
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">Générateur de Texte GPT</h3>
-  <p class="w3-center"><em>Entrez votre prompt pour générer du texte</em></p>
+  <h3 class="w3-center">Text Generator</h3>
+  <p class="w3-center"><em>Enter your prompt here.</em></p>
   <div class="boxes-container">
     <div class="container">
       {% if 'user_email' in session %}
@@ -70,84 +66,26 @@
             <option value="{{ model['url'] }}">{{ model['name'] }}</option>
           {% endfor %}
           </select>
-          <input type="submit" value="Générer">
+          <input type="submit" value="Generate text">
       </form>
       {% else %}
-      <p class="w3-center"><em>Veuillez vous connecter pour utiliser le générateur de texte.</em></p>
+      <p class="w3-center"><em>Please sign in to use the text generation tool.</em></p>
       {% endif %}
     </div>
     <div class="container">
       {% if 'user_email' in session %}
       <form action="/use_text" method="post">
-          <label for="prompt2">Texte Préparé:</label>
+          <label for="prompt2">I already have a script.</label>
           <input type="text" id="prompt2" name="prompt2" required>
-          <input type="submit" value="Utiliser">
+          <input type="submit" value="Use">
       </form>
       {% else %}
-      <p class="w3-center"><em>Veuillez vous connecter pour utiliser le texte préparé.</em></p>
+      <p class="w3-center"><em>Please sign in to paste your own text here.</em></p>
       {% endif %}
     </div>
   </div>
 </div>
-<!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
-  </div>
-</div>
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">IMAGES</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
-    </div>
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
-    </div>
-  </div>
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
-    </div>
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
-    </div>
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
-    </div>
-    <div class="w3-col m3 w3-margin-bottom">
-      <img src="https://www.w3schools.com/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
-  </div>
-</div>
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-<!-- Third Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
-</div>
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
-</div>
+
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
