--- a/GPT4-Version/templates/login.html
+++ b/GPT4-Version/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Se connecter</h2>
+    <h2>Sign In</h2>
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
@@ -23,9 +23,9 @@
     <form action="/login" method="post">
       <label for="email">Email:</label><br>
       <input type="text" id="email" name="email"><br><br>
-      <label for="password">Mot de passe:</label><br>
+      <label for="password">Password:</label><br>
       <input type="password" id="password" name="password"><br><br>
-      <input type="submit" value="Se connecter" class="w3-button w3-blue">
+      <input type="submit" value="Sign In" class="w3-button w3-blue">
     </form>
   </div>
 </body>
